--- a/AppConnectMe/app/src/main/res/layout/activity_main.xml
+++ b/AppConnectMe/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"/>
+    tools:context=".MainActivity"
+    android:padding="20sp">
+
+    <ImageView
+        android:layout_width="300sp"
+        android:layout_height="150sp"
+        android:src="@drawable/app_logo_transparent"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50sp"
+        android:contentDescription="App Logo" />
+
+    <!--Register Button-->
+    <Button
+        android:id="@+id/btn_register"
+        android:text="Register"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100sp"
+        />
+
+    <!--Login Button-->
+    <Button
+        android:id="@+id/btn_login"
+        android:text="Login"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/btn_register"
+        />
+
+</RelativeLayout>
