--- a/AppConnectMe/app/src/main/res/layout/activity_login.xml
+++ b/AppConnectMe/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity"
+    tools:context=".LoginActivity"
     android:padding="20sp">
 
     <!---Registration Label-->
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="@string/register_page_header"
+        android:text="@string/login_page_header"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         android:textSize="25sp"
@@ -26,7 +26,7 @@
         android:layout_centerVertical="true"
         android:id="@+id/email_layout">
         <EditText
-            android:id="@+id/reg_email_input"
+            android:id="@+id/login_email_input"
             android:inputType="textEmailAddress"
             android:hint="@string/email_input_hint"
             android:layout_width="match_parent"
@@ -43,7 +43,7 @@
         android:layout_below="@id/email_layout"
         app:passwordToggleEnabled="true">
         <EditText
-            android:id="@+id/reg_password_input"
+            android:id="@+id/login_password_input"
             android:inputType="textPassword"
             android:hint="@string/password_input_hint"
             android:layout_width="match_parent"
@@ -52,24 +52,24 @@
 
     <!--User Registration-->
     <Button
-        android:id="@+id/btn_register"
-        android:text="@string/reg_button_text"
+        android:id="@+id/btn_login"
+        android:text="@string/login_btn_text"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/password_layout"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:drawableLeft="@drawable/ic_account_register_white"
+        android:drawableLeft="@drawable/ic_login_white"
         android:drawablePadding="10sp"/>
 
-    <!-- Click to go to login activity-->
+    <!-- Click to go to register activity-->
     <TextView
-        android:id="@+id/reg_account_check"
+        android:id="@+id/login_account_check"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Acoount_creation_check_text"
+        android:text="@string/account_login_check_text"
         android:textAlignment="center"
-        android:layout_below="@id/btn_register"
+        android:layout_below="@id/btn_login"
         android:layout_marginTop="30sp"
         android:textColor="@color/blackTextColour"
         android:gravity="center_horizontal" />
