--- a/AppConnectMe/app/src/main/res/layout/activity_profile.xml
+++ b/AppConnectMe/app/src/main/res/layout/activity_profile.xml
@@ -8,6 +8,7 @@
     android:gravity="center"
     tools:context=".ProfileActivity">
 
+    <!--Show email of logged in user-->
     <TextView
         android:id="@+id/user_profile"
         android:layout_width="wrap_content"
