--- a/AppConnectMe/app/src/main/res/layout/activity_main.xml
+++ b/AppConnectMe/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:padding="20sp">
+    android:padding="20sp"
+    android:background="@drawable/app_background_image">
 
     <ImageView
         android:layout_width="300sp"
