--- a/AppConnectMe/app/src/main/res/layout/activity_login.xml
+++ b/AppConnectMe/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,19 @@
         android:drawableLeft="@drawable/ic_login_white"
         android:drawablePadding="10sp"/>
 
+    <TextView
+        android:id="@+id/recover_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:gravity="center_horizontal"
+        android:text="@string/forgot_password_text"
+        android:layout_below="@id/btn_login"
+        android:layout_marginTop="10sp"
+        android:textColor="@color/blackTextColour"
+       />
+
+
     <!-- Click to go to register activity-->
     <TextView
         android:id="@+id/login_account_check"
@@ -69,10 +82,12 @@
         android:layout_height="wrap_content"
         android:text="@string/account_login_check_text"
         android:textAlignment="center"
-        android:layout_below="@id/btn_login"
         android:layout_marginTop="30sp"
         android:textColor="@color/blackTextColour"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20sp"
+        />
 
 
 </RelativeLayout>
