--- a/AppConnectMe/app/src/main/res/values/styles.xml
+++ b/AppConnectMe/app/src/main/res/values/styles.xml
@@ -9,4 +9,17 @@
         <item name="android:windowDisablePreview">true</item>
     </style>
 
+
+    <!-- For Activities containing toolbar-->
+    <!-- Theme Without ActionBar -->
+    <style name="AppThemeNoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- We customize our theme here -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
