--- a/AppConnectMe/app/src/main/res/layout/fragment_chat.xml
+++ b/AppConnectMe/app/src/main/res/layout/fragment_chat.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UsersFragment">
+    tools:context=".ChatListsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/users_recycler_view"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:textSize="30sp"
+        android:layout_gravity="center"
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
